--- a/frontends/html/customer-login.html
+++ b/frontends/html/customer-login.html
@@ -60,6 +60,7 @@
                                                id="email" 
                                                name="email" 
                                                placeholder="Enter your email"
+                                               autocomplete="email"
                                                required>
                                     </div>
                                 </div>
@@ -78,6 +79,7 @@
                                                id="password" 
                                                name="password" 
                                                placeholder="Enter your password"
+                                               autocomplete="current-password"
                                                required>
                                         <button class="btn btn-outline-secondary" 
                                                 type="button" 
