--- a/frontends/html/worker-register.html
+++ b/frontends/html/worker-register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Worker Registration - ServiceHub</title>
+    <title>Worker Registration - WorkBuddy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="../css/main.css" rel="stylesheet">
@@ -300,6 +300,7 @@
                                                    id="password" 
                                                    name="password" 
                                                    placeholder="Create password"
+                                                   autocomplete="new-password"
                                                    required>
                                             <button class="btn btn-outline-secondary" 
                                                     type="button" 
@@ -327,6 +328,7 @@
                                                    id="confirmPassword" 
                                                    name="confirmPassword" 
                                                    placeholder="Confirm password"
+                                                   autocomplete="new-password"
                                                    required>
                                             <button class="btn btn-outline-secondary" 
                                                     type="button" 
