--- a/frontends/html/customer-dashboard.html
+++ b/frontends/html/customer-dashboard.html
@@ -466,6 +466,7 @@
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><a class="dropdown-item" href="my-account.html"><i class="fas fa-user me-2"></i>My Account</a></li>
                             <li><a class="dropdown-item" href="my-bookings.html"><i class="fas fa-calendar me-2"></i>My Bookings</a></li>
+                            <li><a class="dropdown-item" href="community-posts.html"><i class="fas fa-users me-2"></i>Community Posts</a></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-heart me-2"></i>Favorites</a></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-headset me-2"></i>Support</a></li>
                             <li><hr class="dropdown-divider"></li>
