--- a/frontends/html/my-account.html
+++ b/frontends/html/my-account.html
@@ -457,6 +457,13 @@
                     <label for="bio" class="form-label">Bio</label>
                     <textarea class="form-control" id="bio" rows="3" placeholder="Tell us about yourself..."></textarea>
                 </div>
+                <div class="mb-3">
+                    <label for="Status:" class="form-label">Status:</label>
+                   Active: <input type="radio" name="isActive" value="true" id="active">
+                   Inactive:<input type="radio" name="isActive" value="false" id="inActive">
+
+                </div>
+                
                 <button type="submit" class="btn-modern btn-primary-modern">
                     <i class="fas fa-save"></i>Save Changes
                 </button>
