--- a/frontends/html/worker-dashboard.html
+++ b/frontends/html/worker-dashboard.html
@@ -166,6 +166,16 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="add-maid-service.html">
+                            <i class="fas fa-female me-1"></i>Add Maid Service
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="add-caretaker-service.html">
+                            <i class="fas fa-user-md me-1"></i>Add Caretaker Service
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="services.html?view=worker&opportunities=true">
                             <i class="fas fa-search me-1"></i>Find Work
                         </a>
@@ -196,6 +206,9 @@
                             <li><a class="dropdown-item" href="#" onclick="viewEarnings()">
                                 <i class="fas fa-chart-line me-2"></i>Earnings
                             </a></li>
+                            <li><a class="dropdown-item" href="community-posts.html">
+                                <i class="fas fa-users me-2"></i>Community Posts
+                            </a></li>
                             <li><a class="dropdown-item" href="#">
                                 <i class="fas fa-headset me-2"></i>Support
                             </a></li>
@@ -210,10 +223,10 @@
         </div>
     </nav>
 
-    <div class="dashboard-container">
+    <div class="worker-dashboard-container">
         <div class="container">
             <!-- Welcome Section -->
-            <div class="dashboard-card">
+            <div class="worker-dashboard-card">
                 <div class="row">
                     <div class="col-md-8">
                         <h2 class="fw-bold text-primary mb-1">
@@ -251,7 +264,21 @@
                     </div>
                     <div class="col-md-4">
                         <div class="profile-section text-center">
-                            <div class="profile-avatar mx-auto" id="profileAvatar">WR</div>
+                            <!-- Active/Inactive Toggle -->
+                            <div class="mb-3 d-flex align-items-center justify-content-center">
+                                <span class="me-2 fw-semibold">Status:</span>
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="workerStatusToggle" checked>
+                                    <label class="form-check-label" for="workerStatusToggle" id="statusLabel">
+                                        <span class="badge bg-success">Active</span>
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="profile-avatar mx-auto" id="profileAvatar">
+                                <img id="workerPhoto" src="" alt="Worker Photo" class="w-100 h-100 rounded-circle" style="object-fit: cover; display: none;">
+                                <span id="workerInitials">WR</span>
+                            </div>
                             <h5 class="mb-1" id="profileName">Worker Name</h5>
                             <p class="mb-2" id="profileCategory">Service Provider</p>
                             <div class="d-flex justify-content-center gap-2 mb-2">
@@ -273,7 +300,7 @@
             </div>
 
             <!-- Quick Actions -->
-            <div class="dashboard-card">
+            <div class="worker-dashboard-card">
                 <h4 class="fw-bold text-primary mb-3">
                     <i class="fas fa-bolt me-2"></i>Quick Actions
                 </h4>
@@ -332,7 +359,7 @@
             <div class="row">
                 <!-- Recent Activity & Notifications -->
                 <div class="col-lg-8">
-                    <div class="dashboard-card">
+                    <div class="worker-dashboard-card">
                         <!-- Tabs -->
                         <ul class="nav nav-pills mb-3" id="activityTab" role="tablist">
                             <li class="nav-item" role="presentation">
@@ -448,6 +475,18 @@
                 </div>
 
                 <!-- Performance Overview -->
+                <div class="col-lg-4 mb-4">
+                    <div class="stat-card">
+                        <h5>Status</h5>
+                        <div class="d-flex align-items-center justify-content-between">
+                            <span id="statusText">Loading...</span>
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" id="availabilityToggle">
+                                <label class="form-check-label" for="availabilityToggle">Available</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-4">
                     <div class="dashboard-card">
                         <h5 class="fw-bold text-primary mb-3">
